@@ -24,59 +24,59 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-    }
+        public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+                this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+                    }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers(
-                    "/auth/**",
-                    "/hello-servlet",
-                    "/swagger-ui/**",
-                    "/v3/api-docs/**",
-                    "/swagger-resources/**",
-                    "/webjars/**",
-                    "/swagger-ui.html",
-                    "/",
-                    "/error",
-                    "/favicon.ico"
-                ).permitAll()
-                .anyRequest().authenticated()
-            )
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                        @Bean
+                            public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                                    http
+                                                .csrf(csrf -> csrf.disable())
+                                                            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                                                        .sessionManagement(session -> session
+                                                                                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                                                                                                    )
+                                                                                                                .authorizeHttpRequests(auth -> auth
+                                                                                                                                .requestMatchers(
+                                                                                                                                                    "/auth/**",
+                                                                                                                                                                        "/hello-servlet",
+                                                                                                                                                                                            "/swagger-ui/**",
+                                                                                                                                                                                                                "/v3/api-docs/**",
+                                                                                                                                                                                                                                    "/swagger-resources/**",
+                                                                                                                                                                                                                                                        "/webjars/**",
+                                                                                                                                                                                                                                                                            "/swagger-ui.html",
+                                                                                                                                                                                                                                                                                                "/",
+                                                                                                                                                                                                                                                                                                                    "/error",
+                                                                                                                                                                                                                                                                                                                                        "/favicon.ico"
+                                                                                                                                                                                                                                                                                                                                                        ).permitAll()
+                                                                                                                                                                                                                                                                                                                                                                        .anyRequest().authenticated()
+                                                                                                                                                                                                                                                                                                                                                                                    )
+                                                                                                                                                                                                                                                                                                                                                                                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+                                                                                                                                                                                                                                                                                                                                                                                                        return http.build();
+                                                                                                                                                                                                                                                                                                                                                                                                            }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+                                                                                                                                                                                                                                                                                                                                                                                                                @Bean
+                                                                                                                                                                                                                                                                                                                                                                                                                    public PasswordEncoder passwordEncoder() {
+                                                                                                                                                                                                                                                                                                                                                                                                                            return new BCryptPasswordEncoder();
+                                                                                                                                                                                                                                                                                                                                                                                                                                }
 
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
-    }
+                                                                                                                                                                                                                                                                                                                                                                                                                                    @Bean
+                                                                                                                                                                                                                                                                                                                                                                                                                                        public AuthenticationManager authenticationManager(
+                                                                                                                                                                                                                                                                                                                                                                                                                                                    AuthenticationConfiguration authenticationConfiguration) throws Exception {
+                                                                                                                                                                                                                                                                                                                                                                                                                                                            return authenticationConfiguration.getAuthenticationManager();
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-}
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                    @Bean
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                        public CorsConfigurationSource corsConfigurationSource() {
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                CorsConfiguration configuration = new CorsConfiguration();
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        configuration.setAllowedOrigins(List.of("*"));
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                configuration.setExposedHeaders(List.of("Authorization"));
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        source.registerCorsConfiguration("/**", configuration);
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                return source;
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    }
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    }
